# test

./: .gitignore  CMakeLists.txt  README.md
.github/: RELEASE_NOTES_TEMPLATE.md
.github/workflows/: ci.yml
config/: blackhat.conf  colinux.yaml
config/profiles/: debian-dev.yaml  kali-dev.yaml
daemon/: Cargo.toml
daemon/src/: config.rs  console.rs  device.rs  hypervisor.rs  iocp.rs  lib.rs  logging.rs  main.rs  profiles.rs  ring.rs  service.rs  vblk.rs  vblk_ring.rs  vtty.rs
daemon/src/loader/: ovmf.rs  pvh.rs
daemon/src/net/: passthrough.rs  stealth.rs
daemon/tests/: ring_tests.rs
docs/: README.md  TROUBLESHOOTING.md  debian-rootfs.md  hypervisor-net.md  kali-kernel-build.md  meta-repo.md
driver_c/: device.c  entry.c  mem.c  vblk.c  vnet.c  vtty.c
driver_c/include/: colinux_ioctls.h
kernel/: CMakeLists.txt  cooperative.c  cooperative.h  syscall_64.tbl
linux/drivers/colinux/: Kconfig  Makefile  colx_core.c  colx_tty.c  colx_vblk.c
linux/include/uapi/linux/: colinux_ring.h
mac/: CMakeLists.txt  blackhat.cpp
native/app/src/ui/: panels.rs
prompts/: codex_rust_system.prompt  codex_ts_system.prompt
prompts/fragments/: cli.fragment  react_ui.fragment  security.fragment
scripts/: bootstrap-meta-repo.ps1  bootstrap-meta-repo.sh  codex-cli.cmd  get-rootfs.ps1  install-driver.ps1  install-service.ps1  setup.ps1  setup.sh  sign-test-cert.ps1  start-daemon.ps1  teardown.ps1  teardown.sh  tunnel.ps1  uninstall-service.ps1
user/: CMakeLists.txt  blackhat.ps1  blackhat.sh  coop_console_test.c
userspace/: build-kali-like-kernel.sh  mkrootfs_debian.sh  mkrootfs_kali.sh  mkrootfs_kali_redteam.sh
win/: CMakeLists.txt  blackhat.c
