[package]
name = "colinux-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
parking_lot = "0.12"
crossbeam-channel = "0.5"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "net", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_System_Diagnostics_Debug",
] }
windows-service = { version = "0.6" }
